This file describes the new features in each poezio release.
For more detailed changelog, see the roadmap:
http://dev.louiz.org/projects/poezio/roadmap

* Poezio 0.9 - dev

- Use slixmpp instead of sleekxmpp, remove threads and locks
- Require python 3.4 for the input handling, event loop, xml parser, and ssl API

- Due to the slixmpp move, /reconnect now works (ecf22cb)
- The user’s JID is now shown in the roster (a0a00d5)
- Stream errors are now displayed, which is more helpful to the user than 'connection failed' (5cd854f)
- The (system-wide) launch script is now a setuptools entry point that checks dependencies (22f9b7a)
- XHTML-IM base64 embedded images are now extracted by default (a9f642f)
- New open_all_bookmarks option to let the user choose what to do with bookmarks without autojoin (5a5d581)
- Store the server certificate fingerprint with SHA-512 (8d2408c)
- pipe_cmd plugin that allows simple remote control of poezio (4b0d9a2, dc46286)
- /link now uses xdg-open (ba32d74)
- Display information about the XMPP features the contact supports (a1f86720, 2dafd6d5)
- make the data forms tab better (3858273, 7378ea9)
- Implement ad-hoc commands (bbc55fa)
- a change_title plugin changes the title of the terminal depending on the current tab. Also, poezio is now "poezio" and not "python3" (c1d19fa, 48e59d3)
- The OTR plugin now tries to interpret html by default (4e4ab56)
- The OTR plugin also has nicer and more informative messages (71ae29df, f782516e, d7bbf339c, a0c5f95, 25e91b0)
- The interface will adapt if the terminal is too small (0caf941)
- Implement XEP-0184 (message delivery receipts) (5999b71)
- Better timezone handling (02d9fd9)
- Better alias plugin, with permanent alias storage (e80a90)
- poezio_gpg_export script to generate a config for the gpg plugin (8ec5671)
- improvements to dynamic tabs, information about jid lock/unlock (f7294b2, 5c9dd44, fba511e)
- irc plugin to use with biboumi (cf752c2)
- implementation of XEP-0012 - last activity (65c2473)