@@ -6,7 +6,7 @@ if [ -d "$poezio_dir/.git" ]
 then
     args=$(git --git-dir="$poezio_dir/.git" show --format='%h %ci' | head -n1)
 else
-    args="0.8.3-dev"
+    args="0.9-dev"
 fi
 
 if [ -e "$poezio_dir/$VENV" ]
